--- a/WebShop/Views/Category/Index.cshtml
+++ b/WebShop/Views/Category/Index.cshtml
@@ -7,7 +7,7 @@
             </h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="" asp-action="" class="btn btn-primary">
+            <a asp-controller="category" asp-action="create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Category
             </a>
         </div>
