--- a/WebShop/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/WebShop/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using WebShop.Areas.Identity
 @using WebShop.Areas.Identity.Pages
+@using WebShop.Utility
+@using WebShop.Models
+@using WebShop.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
