--- a/WebShop/Views/_ViewImports.cshtml
+++ b/WebShop/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebShop
 @using WebShop.Models
 @using WebShop.Models.ViewModel
+@using WebShop.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
